docker-scripts/unifi-controler/unifi-controller.lb.service.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: unifi-controller-lb-udp
    namespace: unifi-controller
    annotations:
        metallb.universe.tf/address-pool: unifi-controller
        metallb.universe.tf/allow-shared-ip: unifi-controller
spec:
    type: LoadBalancer
    externalTrafficPolicy: Local
    selector:
        app: unifi-controller
    ports:
        # Required for device communication
        - name: com
          port: 8080
          protocol: TCP
          targetPort: com
        # For mobile throughput test
        - name: test
          port: 6789
          protocol: TCP
          targetPort: test

---
apiVersion: v1
kind: Service
metadata:
    name: unifi-controller-lb-tcp
    namespace: unifi-controller
    annotations:
        metallb.universe.tf/address-pool: unifi-controller
        metallb.universe.tf/allow-shared-ip: unifi-controller
spec:
    type: LoadBalancer
    externalTrafficPolicy: Local
    selector:
        app: unifi-controller
    ports:
        # Unifi STUN port
        - name: stun
          port: 3478
          protocol: UDP
          targetPort: stun
        # Required for AP discovery
        - name: disc
          port: 10001
          protocol: UDP
          targetPort: disc
        # Required for Make controller discoverable on L2 network option
        - name: discs
          port: 1900
          protocol: UDP
          targetPort: discs
        # Remote syslog port
        - name: syslog
          port: 5514
          protocol: UDP
          targetPort: syslog
