docker-scripts/unifi-controler/unifi-controller.service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-controller
  namespace: unifi-controller
spec:
  selector:
    app: unifi-controller
  ports:
# Unifi web admin port
  - name: https
    port: 443
    protocol: TCP
    targetPort: https
  - name: httpss
    port: 8443
    protocol: TCP
    targetPort: httpss
# Required for device communication
  - name: com
    port: 8080
    protocol: TCP
    targetPort: com
# For mobile throughput test
  - name: test
    port: 6789
    protocol: TCP
    targetPort: test

# Unifi STUN port
  - name: stun
    port: 3478
    protocol: UDP
    targetPort: stun
# Required for AP discovery
  - name: disc
    port: 10001
    protocol: UDP
    targetPort: disc
# Required for Make controller discoverable on L2 network option
  - name: discs
    port: 1900
    protocol: UDP
    targetPort: discs
# Remote syslog port
  - name: syslog
    port: 5514
    protocol: UDP
    targetPort: syslog
