docker-scripts/unifi-controler/unifi-controller.ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: unifi-controller
    namespace: unifi-controller
    annotations:
        nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
    rules:
        - host: unifi-controller.lan
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: unifi-controller
                            port:
                                name: httpss
